--- a/2018-05-02/mazhichao/readme.me
+++ b/2018-05-02/mazhichao/readme.me
@@ -1,1 +1,1 @@
-![alt text](https://github.com/felixmzc/Huatec-Team/blob/master/2018-05-02/mazhichao/3.PNG)
+![alt text](https://github.com/felixmzc/Huatec-Team/blob/master/2018-05-02/mazhichao/3.PNG "Title")
