--- a/2018-05-02/mazhichao/readme.me
+++ b/2018-05-02/mazhichao/readme.me
@@ -1,1 +1,1 @@
-![alt text](https://github.com/felixmzc/Huatec-Team/blob/master/2018-05-02/mazhichao/%E6%8D%95%E8%8E%B7.PNG "Title")
+![alt text](https://github.com/felixmzc/Huatec-Team/blob/master/2018-05-02/mazhichao/%E6%8D%95%E8%8E%B7.jpg "Title")
